single page image overlap solved

--- a/css/otherstyle.scss
+++ b/css/otherstyle.scss
@@ -161,10 +161,7 @@
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-        flex-direction: column-reverse;
+        flex-direction: column;
         -webkit-transform: none !important;
         transform: none !important;
       }
